# C_Programming_Exercises

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md
.github/workflows/: c-build.yml
docs/html/: array__stats_8h_source.html  common__macros_8h_source.html  dir_00c8a277f9d4de97a1c64a6317278b31.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_717b3188b45e89f652d81ea10aa11b1d.html  dir_b350fc9ae0c2b0d6a73a73514759756b.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  index.html  log_8h_source.html  md__r_e_a_d_m_e.html  pages.html
docs/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js
docs/latex/: array__stats_8h_source.tex  common__macros_8h_source.tex  files.tex  log_8h_source.tex  md__r_e_a_d_m_e.tex  refman.tex
examples/: 01_array_utils_example.c  02_array_transform_example.c
examples/02_array_transform/: main.c
include/: array_utils.h  common_macros.h  log.h
include/array/: array_debug.h  array_stats.h  array_transform.h
lib/unity/: unity.c
src/: array_utils.c
tests/: 01_test_array_utils.c
tests/01_array_stats/: stats.c
tests/02_array_transform/: clamp.c  delete_me.c  offset.c
tests/manual/: 01_test_array_utils.c
tests/unity/: 01_test_array_stats_unity.c  01_test_array_utils_unity.c  02_test_array_transform_unity.c
